RESOLVED FIXED307152
[LBSE] Fix text opacity issues
https://bugs.webkit.org/show_bug.cgi?id=307152
Summary [LBSE] Fix text opacity issues
Rob Buis
Reported 2026-02-06 01:58:32 PST
Fix text opacity issues.
Attachments
Rob Buis
Comment 1 2026-02-06 02:05:13 PST
EWS
Comment 2 2026-02-06 12:49:04 PST
Committed 306968@main (5688d36d24f3): <https://commits.webkit.org/306968@main> Reviewed commits have been landed. Closing PR #58036 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-06 12:50:14 PST
Note You need to log in before you can comment on or make changes to this bug.