[LBSE] Fix text opacity issues https://bugs.webkit.org/show_bug.cgi?id=307152

Reviewed by Nikolas Zimmermann.

In Legacy SVG RenderSVGText gets no layer and RenderSVGText is responsible for
opacity/blending through SVGRenderingContext::prepareToRenderSVGContent.

In LBSE the call to SVGRenderingContext::prepareToRenderSVGContent is still being
used, but also RenderLayer::beginTransparencyLayers is used (since RenderSVGText requires
a layer), causing two transparancy layers to be applied and visually text that is too bright.

To fix this, skip the SVGRenderingContext::prepareToRenderSVGContent transparancy layer
logic in LBSE for RenderSVGText.

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* Source/WebCore/rendering/svg/SVGRenderingContext.cpp:
(WebCore::SVGRenderingContext::prepareToRenderSVGContent):

Canonical link: https://commits.webkit.org/306968@main